# IrishMountainWeatherApp

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
MountainMapping/: CMakeLists.txt  MountainMapping.hpp
MountainMapping/lib/: Map_config.hpp  Map_update.hpp
MountainMapping/src/: Map_config.cpp  Map_update.cpp
RawData/: API_Notes.odt  MountainRangeList_long_lat.csv
TimeConfig/: CMakeLists.txt  TimeConfig.hpp
TimeConfig/lib/: time_formatter.hpp
TimeConfig/src/: time_formatter.cpp
WeatherForecast/: CMakeLists.txt  README.md  WeatherForecast.hpp  pugsub
WeatherForecast/lib/: Forecast.hpp
WeatherForecast/src/: Forecast.cpp
